# iota-mnemonic

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: api.rs  main.rs
