[package]
name = "mnemonic"
version = "0.1.0"
authors = ["Jeroen van den Hout <jlvandenhout@gmail.com>"]
edition = "2018"

[dependencies]
# itertools = "0.10.0"
iota-core = { git = "https://github.com/iotaledger/iota.rs", branch = "dev" }
iota-crypto = { git = "https://github.com/iotaledger/crypto.rs", branch = "dev", features = ["bip39", "bip39-en", "blake2b", "ed25519", "slip10"]}
hex = "0.4.3"
# tokio = { version = "1.1", features = ["full"] }
